# gitlab_jira_integration

./: .gitignore  .gitlab-jira-integration.example.yml  CHANGELOG.md  README.md  VERSION  publish.sh  pyproject.toml  setup.cfg
src/gitlab_jira_integration/: jira_client.py  main.py
tests/: test_jira_client.py
tests/versions/v1.68.0/: application_1.txt  script.sql
